fixed missing semi-colon mobile response

--- a/assets/scss/06-Mobile-Response/desktop.scss
+++ b/assets/scss/06-Mobile-Response/desktop.scss
@@ -3,5 +3,5 @@
         margin: 0rem 0;
         padding: 0rem 0;
     }
-    .mobile-view-only { display: none }
+    .mobile-view-only { display: none; }
 }
